# datastreamer-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yaml  start.sh  stop.sh
.cargo/: config.toml
examples/: config.toml  old.rs
src/: lib.rs  main.rs  metrics.rs  parser.rs  processor.rs  publisher.rs  util.rs
src/parser/: ndwprocessor.rs
src/processor/: ndwprocessor.rs
src/publisher/: constant.rs  default.rs  mod.rs
src/resources/: config.toml
