[package]
name = "rstream-in"
version = "0.2.0"
authors = ["Gerald Haesendonck <gerald.haesendonck@ugent.be>", "Sitt Min Oo <x.sittminoo@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
itertools = "0.10.0"
walkdir = "2"
log = "0.4.14"
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"
env_logger = "0.9.0"
tokio = {version = "1.12.0", features = ["full"]}
tokio-tungstenite= "0.15.0"
json = "0.12.4"  # serde-json seems to be much slower
clap = "2.33.0"
