[package]
name = "datastreamer"
version = "0.2.0"
authors = ["Gerald Haesendonck <gerald.haesendonck@ugent.be>", "Sitt Min Oo <x.sittminoo@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[profile.dev]
incremental = true

[dependencies]
serde_yaml = "0.8"
metered= "0.8"
async-trait = "0.1.51"
lazy_static = "1.4.0"
bytes = "1"
chrono = {version= "0.4", features=["serde"]}
clap = "2.33.0"
env_logger = "0.9.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
itertools = "0.10.0"
serde-xml-rs = "0.5.1"
csv = "1.1"
json = "0.12.4"  # serde-json seems to be much slower
log = "0.4.14"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
tokio-tungstenite = "0.15.0"
toml = "0.5"
walkdir = "2"
